--- a/manifest.json
+++ b/manifest.json
@@ -244,7 +244,10 @@
 					"img/1.jpg",
 					"img/3.jpg",
 					"css/App.css",
-					"js/vue-tap.js"
+					"js/vue-tap.js",
+					"html/Qa/index.js",
+					"js/Com/Com_List.js",
+					"js/Com/Com_Carousel.js"
 				],
 				"refer": [],
 				"priority": 0
