--- a/manifest.json
+++ b/manifest.json
@@ -395,11 +395,19 @@
 				],
 				"refer": [],
 				"priority": 0
+			},
+			"index.html": {
+				"resources": [
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"js/vue.min.js"
+				],
+				"refer": [],
+				"priority": 0
 			}
 		},
 		"idle": {
 			"resources": [
-				"index.html",
 				"css/App.scss",
 				"js/mui.js"
 			]
