新增 安卓双击返回桌面

--- a/manifest.json
+++ b/manifest.json
@@ -203,7 +203,8 @@
 					"html/Qa/Room.html",
 					"css/iconfont.css",
 					"fonts/iconfont.ttf",
-					"html/Music/Room.html"
+					"html/Music/Room.html",
+					"js/Common/androidBack.js"
 				],
 				"refer": [
 					"html/Box/Room.html",
